--- a/src/README
+++ b/src/README
@@ -1,2 +1,2 @@
 The source code on the HEAD of this branch is the development version.
-For latest (functional) stable version revert to tag v20110414 of this repositiory.
+For latest stable version switch to tag v2.75 of this repositiory.
