--- a/src/README
+++ b/src/README
@@ -1,2 +1,5 @@
-The source code on the HEAD of this branch is the development version.
-For latest stable version switch to tag v2.75 of this repositiory.
+To download the windows 32 bits and 64 bits executable versions click the "Downloads" 
+button at right upper corner of the page, and select the bobcat_v2.75.zip package.
+
+The source code on the HEAD of this branch is the development version. For latest stable 
+version switch to tag v2.75 of this repositiory.
