--- a/src/README
+++ b/src/README
@@ -1,5 +1,2 @@
-To download the windows 32 bits and 64 bits executable versions click the "Downloads" 
-link on this page, and select the bobcat_v3.25.zip package.
-
-The source code on the HEAD of this branch is the development version. For latest stable 
+The source code on the MASTER branch is the development version. For latest stable 
 version switch to tag v3.25 of this repositiory.
