--- a/src/README
+++ b/src/README
@@ -1,2 +1,2 @@
 The source code on the MASTER branch is the development version. For latest stable 
-version switch to tag v3.25 of this repositiory.
+version switch to tag v6.4b of this repositiory.
