--- a/book/README
+++ b/book/README
@@ -1,1 +1,5 @@
 Bobcat's strong book, bobcat2.ini by Denis Mendoza.
+
+https://github.com/Bobcat/bobcat/downloads 
+
+and download from there the bobcat2.zip file.
