--- a/book/README
+++ b/book/README
@@ -1,5 +1,5 @@
-Bobcat's strong book, bobcat2.ini by Denis Mendoza.
+Bobcat's strong book, bobcat2.ini by Denis Mendoza:
 
 https://github.com/Bobcat/bobcat/downloads 
 
-and download from there the bobcat2.zip file.
+And download from there the bobcat2.zip file.
