--- a/book/README
+++ b/book/README
@@ -1,4 +1,4 @@
-Bobcat's strong book, bobcat2.ini by Denis Mendoza:
+Bobcat's strong book, bobcat2.bin by Denis Mendoza:
 
 https://github.com/Bobcat/bobcat/downloads 
 
