--- a/book/README
+++ b/book/README
@@ -3,3 +3,5 @@ Bobcat's strong book, bobcat2.bin by Denis Mendoza:
 https://github.com/Bobcat/bobcat/downloads 
 
 And download from there the bobcat2.zip file.
+
+Put the files bobcat2.bin and bobcat.ini in the same directory as the executable.
